added photo display and some seo

--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
-	</head>
-	<body>
-		<div>%svelte.body%</div>
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="description" content="Cagers Basketball Vancouver, WA was created to provide competitive basketball programs for players in grades 3-12. If you are looking for basketball in Vancouver, WA check out Cagers.">
+	<link rel="icon" href="%svelte.assets%/favicon.png" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	%svelte.head%
+</head>
+<body>
+	<div>%svelte.body%</div>
+</body>
 </html>
